--- a/test/test-project/docker-compose.yml
+++ b/test/test-project/docker-compose.yml
@@ -14,6 +14,8 @@ services:
   test-project:
     privileged: true
     image: "node:${NODE_IMAGE_TAG}"
+    extra_hosts:
+     - "host.docker.internal:host-gateway"
     environment:
       - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
     volumes:
