--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^1.0.6",
     "@asyncapi/parser": "^3.0.2",
-    "@npmcli/arborist": "^2.2.4",
+    "@npmcli/arborist": "5.6.3",
     "@smoya/multi-parser": "^5.0.0",
     "ajv": "^8.12.0",
     "chokidar": "^3.4.0",
