--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "ag": "./cli.js"
   },
   "engines": {
-    "node": ">12.16",
-    "npm": ">6.13.7"
+    "node": ">=18.12.0",
+    "npm": ">=8.19.0"
   },
   "scripts": {
     "test": "npm run test:unit && npm run test:integration && npm run test:cli",
@@ -51,6 +51,7 @@
     "@asyncapi/generator-react-sdk": "^1.0.18",
     "@asyncapi/parser": "^3.0.14",
     "@npmcli/arborist": "5.6.3",
+    "@npmcli/config": "^8.0.2",
     "@smoya/multi-parser": "^5.0.0",
     "ajv": "^8.12.0",
     "chokidar": "^3.4.0",
@@ -65,6 +66,7 @@
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "nunjucks": "^3.2.0",
+    "requireg": "^0.2.2",
     "resolve-from": "^5.0.0",
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
