added .turbo in .gitignore.

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
     },
     "test:dev": {
       "interactive": true,
-      "cache": false
+      "cache": false,
+      "persistent": true
     },
     "test": {},
     "test:unit": {},
