--- a/apps/generator/.gitignore
+++ b/apps/generator/.gitignore
@@ -18,3 +18,4 @@ test/temp/integrationTestResult
 test/test-project/package-lock.json
 test/test-project/verdaccio/storage/
 test/test-project/storage/
+.turbo
