--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -37,10 +37,10 @@ jobs:
         run: |
           rm -r ./pages/docs/tools/generator
           mkdir -p ./pages/docs/tools/generator
-          rm ../generator/docs/README.md
-          rm -r ../generator/docs/jsdoc2md-handlebars
-          printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/docs/_section.md
-          mv ../generator/docs/*.md ./pages/docs/tools/generator
+          rm ../generator/apps/generator/docs/README.md
+          rm -r ../generator/apps/generator/docs/jsdoc2md-handlebars
+          printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/apps/generator/docs/_section.md
+          mv ../generator/apps/generator/docs/*.md ./pages/docs/tools/generator
       - name: Commit and push
         working-directory: ./website
         run: |
