--- a/test/test-project/verdaccio/config.yaml
+++ b/test/test-project/verdaccio/config.yaml
@@ -7,7 +7,10 @@ uplinks:
   npmjs:
     url: https://registry.npmjs.org/
 packages:
-  "**":
+  "react-template":
+    access: admin
+    publish: admin
+  "!react-template":
     access: admin
     proxy: npmjs
-log: { type: stdout, format: pretty, level: debug }
+log: { type: stdout, format: pretty, level: error }
