--- a/.github/workflows/if-nodejs-release.yml
+++ b/.github/workflows/if-nodejs-release.yml
@@ -18,17 +18,16 @@ on:
       - next
 
 jobs:
-
   test-nodejs:
     # We just check the message of first commit as there is always just one commit because we squash into one before merging
     # "commits" contains array of objects where one of the properties is commit "message"
     # Release workflow will be skipped if release conventional commits are not used
     if: |
-      startsWith( github.repository, 'asyncapi/' ) &&
-      (startsWith( github.event.commits[0].message , 'fix:' ) ||
-      startsWith( github.event.commits[0].message, 'fix!:' ) ||
-      startsWith( github.event.commits[0].message, 'feat:' ) ||
-      startsWith( github.event.commits[0].message, 'feat!:' ))
+      startsWith(github.repository, 'asyncapi/') &&
+      (startsWith(github.event.commits[0].message, 'fix:') ||
+      startsWith(github.event.commits[0].message, 'fix!:') ||
+      startsWith(github.event.commits[0].message, 'feat:') ||
+      startsWith(github.event.commits[0].message, 'feat!:'))
     name: Test NodeJS release on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -60,7 +59,7 @@ jobs:
       - if: steps.lockversion.outputs.version == '18' && matrix.os == 'windows-latest'
         name: Install npm cli 8
         shell: bash
-        #npm cli 10 is buggy because of some cache issues
+        # npm cli 10 is buggy because of some cache issues
         run: npm install -g npm@8.19.4
       - if: steps.packagejson.outputs.exists == 'true'
         name: Install dependencies
@@ -108,9 +107,9 @@ jobs:
         shell: bash
         run: npm ci
       - if: steps.packagejson.outputs.exists == 'true'
-       name: Create Release Pull Request or Release
+        name: Create Release Pull Request or Release
         uses: changesets/action@v1
-        "id": release
+        id: release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -118,7 +117,7 @@ jobs:
           GIT_AUTHOR_EMAIL: info@asyncapi.io
           GIT_COMMITTER_NAME: asyncapi-bot
           GIT_COMMITTER_EMAIL: info@asyncapi.io
-           with:
+        with:
           publish: npm run publish-packages
           version: npm run version-packages
           commit: "version packages"
