--- a/.github/workflows/if-nodejs-release.yml
+++ b/.github/workflows/if-nodejs-release.yml
@@ -23,11 +23,11 @@ jobs:
     # "commits" contains array of objects where one of the properties is commit "message"
     # Release workflow will be skipped if release conventional commits are not used
     if: |
-      startsWith(github.repository, 'asyncapi/') &&
-      (startsWith(github.event.commits[0].message, 'fix:') ||
-      startsWith(github.event.commits[0].message, 'fix!:') ||
-      startsWith(github.event.commits[0].message, 'feat:') ||
-      startsWith(github.event.commits[0].message, 'feat!:'))
+      startsWith( github.repository, 'asyncapi/' ) &&
+      (startsWith( github.event.commits[0].message , 'fix:' ) ||
+      startsWith( github.event.commits[0].message, 'fix!:' ) ||
+      startsWith( github.event.commits[0].message, 'feat:' ) ||
+      startsWith( github.event.commits[0].message, 'feat!:' ))
     name: Test NodeJS release on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -59,7 +59,7 @@ jobs:
       - if: steps.lockversion.outputs.version == '18' && matrix.os == 'windows-latest'
         name: Install npm cli 8
         shell: bash
-        # npm cli 10 is buggy because of some cache issues
+        #npm cli 10 is buggy because of some cache issues
         run: npm install -g npm@8.19.4
       - if: steps.packagejson.outputs.exists == 'true'
         name: Install dependencies
@@ -107,22 +107,21 @@ jobs:
         shell: bash
         run: npm ci
       - if: steps.packagejson.outputs.exists == 'true'
-        name: Create Release Pull Request or Release
-        uses: changesets/action@v1
+        name: Add plugin for conventional commits for semantic-release
+        run: npm install --save-dev conventional-changelog-conventionalcommits@5.0.0
+      - if: steps.packagejson.outputs.exists == 'true'
+        name: Publish to any of NPM, Github, and Docker Hub
         id: release
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           GIT_AUTHOR_NAME: asyncapi-bot
           GIT_AUTHOR_EMAIL: info@asyncapi.io
           GIT_COMMITTER_NAME: asyncapi-bot
           GIT_COMMITTER_EMAIL: info@asyncapi.io
-        with:
-          publish: npm run publish-packages
-          version: npm run version-packages
-          commit: "version packages"
-          title: "chore: version packages"
-
+        run: npx semantic-release@19.0.4
       - if: failure() # Only, on failure, send a message on the 94_bot-failing-ci slack channel
         name: Report workflow run status to Slack
         uses: 8398a7/action-slack@v3
