--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "generator:docs": "turbo run docs --filter=@asyncapi/generator",
     "generator:docker:build": "turbo run docker:build --filter=@asyncapi/generator",
     "generator:lint": "turbo run lint --filter=@asyncapi/generator",
-    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "publish-packages": "turbo run build && changeset publish"
+    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator"
   },
   "devDependencies": {
     "turbo": "1.13.3"
@@ -28,9 +25,6 @@
     "node": ">=18.12.1"
   },
   "packageManager": "npm@9.5.0",
-  "dependencies": {
-    "@changesets/cli": "^2.26.2"
-  },
   "workspaces": [
     "apps/*",
     "packages/*"
