--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
-output
-node_modules
-.github/templates-list-validator/dist
-test/temp
-test/test-templates/react-template/__transpiled
+apps/generator/output/*
+**/node_modules/
+.github/templates-list-validator/dist/*
+apps/generator/test/temp/*
+apps/generator/test/test-templates/react-template/__transpiled/*
+
