--- a/.github/workflows/if-nodejs-release.yml
+++ b/.github/workflows/if-nodejs-release.yml
@@ -18,13 +18,12 @@ on:
       - next
 
 jobs:
-
   test-nodejs:
     # We just check the message of first commit as there is always just one commit because we squash into one before merging
     # "commits" contains array of objects where one of the properties is commit "message"
     # Release workflow will be skipped if release conventional commits are not used
     if: |
-      startsWith( github.repository, 'asyncapi/' ) && 
+      startsWith( github.repository, 'asyncapi/' ) &&
       (startsWith( github.event.commits[0].message , 'fix:' ) ||
       startsWith( github.event.commits[0].message, 'fix!:' ) ||
       startsWith( github.event.commits[0].message, 'feat:' ) ||
@@ -33,7 +32,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # Using macos-13 instead of latest (macos-14) due to an issue with Puppeteer and such runner. 
+        # Using macos-13 instead of latest (macos-14) due to an issue with Puppeteer and such runner.
         # See: https://github.com/puppeteer/puppeteer/issues/12327 and https://github.com/asyncapi/parser-js/issues/1001
         os: [ubuntu-latest, macos-13, windows-latest]
     steps:
@@ -75,7 +74,7 @@ jobs:
         with:
           status: ${{ job.status }}
           fields: repo,action,workflow
-          text: 'Release workflow failed in testing job'
+          text: "Release workflow failed in testing job"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CI_FAIL_NOTIFY }}
 
@@ -129,6 +128,6 @@ jobs:
         with:
           status: ${{ job.status }}
           fields: repo,action,workflow
-          text: 'Release workflow failed in release job'
+          text: "Release workflow failed in release job"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_CI_FAIL_NOTIFY }}
