--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-.DS_Store
+
 node_modules
-npm-debug.log
-output
-.vscode
-######################
-# Intellij
-######################
-.idea/
-*.iml
-*.iws
-*.ipr
-*.ids
-*.orig
-out/
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
 coverage
-test/temp/integrationTestResult
-test/test-project/package-lock.json
-test/test-project/verdaccio/storage/
-test/test-project/storage/
+
+# Turbo
+.turbo
+
