--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "generator:docs": "turbo run docs --filter=@asyncapi/generator",
     "generator:docker:build": "turbo run docker:build --filter=@asyncapi/generator",
     "generator:lint": "turbo run lint --filter=@asyncapi/generator",
-    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator"
+    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
+    "generator-filters:test": "turbo run test --filter=@asyncapi/generator-filters"
   },
   "devDependencies": {
     "turbo": "1.13.3"
