--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,7 @@
       "cache": false,
       "persistent": true
     },
-    "test": {},
+    "test": { "cache": false },
     "test:unit": {},
     "test:integration": {},
     "test:cli": {},
