feat: Added the correct change.md file and set the generator filters private  true.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,7 @@
   "linked": [],
   "access": "public",
   "baseBranch": "master",
+  "ignore": ["@asyncapi/generator-filters"],
   "updateInternalDependencies": "patch",
   "privatePackages": {
     "version": true,
