--- a/apps/nunjucks-filters/package.json
+++ b/apps/nunjucks-filters/package.json
@@ -2,6 +2,7 @@
   "name": "@asyncapi/generator-filters",
   "version": "2.1.0",
   "description": "Library with Nunjucks filters for templates using AsyncAPI Generator",
+  "private": false,
   "main": "src/index.js",
   "scripts": {
     "test": "ava",
