Added the functionality for the preloading the filter.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "generator:docker:build": "turbo run docker:build --filter=@asyncapi/generator",
     "generator:lint": "turbo run lint --filter=@asyncapi/generator",
     "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
+    "generator:update:snapshot":"turbo run test:integration:update --filter=@asyncapi/generator",
     "nunjucks-filters:test": "turbo run test --filter=@asyncapi/generator-filters"
   },
   "devDependencies": {
