--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -74,7 +74,8 @@
     "simple-git": "^3.3.0",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "nunjucks-filters":"file:../nunjucks-filters"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
