--- a/turbo.json
+++ b/turbo.json
@@ -10,14 +10,15 @@
       "persistent": true
     },
     "test": { "cache": false },
-    "test:unit": {},
-    "test:integration": {},
+    "test:unit": {"cache":false},
+    "test:integration": {"cache": false},
     "test:cli": {},
     "test:cleanup": {},
     "docs": {},
     "docker:build": {},
     "lint": {},
-    "lint:tpl:validator": {}
+    "lint:tpl:validator": {},
+    "test:integration:update":{"cache": false}
   },
   "experimentalUI": true
 }
