--- a/apps/nunjucks-filters/package.json
+++ b/apps/nunjucks-filters/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "ava",
     "docs": "jsdoc2md src/customFilters.js > docs/api.md",
-    "lint": "eslint --max-warnings 0 --config .eslintrc .",
-    "release": "semantic-release",
+    "lint": "eslint --max-warnings 0 --config ../../.eslintrc --ignore-path ../../.eslintignore  .",
     "lint:fix": "eslint --fix --config ../../.eslintrc  --ignore-path ../../.eslintignore .",
     "generate:assets": "npm run docs",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION"
