--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo dev",
     "test": "turbo run test",
     "lint": "turbo lint",
+    "lint:fix": "turbo run lint:fix",
     "generator:test": "turbo run test --filter=@asyncapi/generator",
     "generator:test:dev": "turbo run test:dev",
     "generator:test:unit": "turbo run test:unit  --filter=@asyncapi/generator",
