updated the documentation

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "turbo run test",
     "lint": "turbo lint",
     "lint:fix": "turbo run lint:fix",
+    "changeset": "changeset",
     "generator:test": "turbo run test --filter=@asyncapi/generator",
     "generator:test:dev": "turbo run test:dev",
     "generator:test:unit": "turbo run test:unit  --filter=@asyncapi/generator",
@@ -18,10 +19,11 @@
     "generator:docker:build": "turbo run docker:build --filter=@asyncapi/generator",
     "generator:lint": "turbo run lint --filter=@asyncapi/generator",
     "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
-    "generator:update:snapshot":"turbo run test:integration:update --filter=@asyncapi/generator",
+    "generator:update:snapshot": "turbo run test:integration:update --filter=@asyncapi/generator",
     "nunjucks-filters:test": "turbo run test --filter=@asyncapi/generator-filters"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "turbo": "1.13.3"
   },
   "engines": {
