fix: add pacote to package.json file

--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -67,6 +67,7 @@
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "nunjucks": "^3.2.0",
+    "pacote": "^15.1.1", 
     "requireg": "^0.2.2",
     "resolve-from": "^5.0.0",
     "resolve-pkg": "^2.0.0",
