--- a/.github/workflows/release-with-changesets.yml
+++ b/.github/workflows/release-with-changesets.yml
@@ -114,8 +114,8 @@ jobs:
         id: release
         with:
           version: npx -p @changesets/cli changeset version
-          commit: "chore(release): version packages"
-          title: "chore(release): version packages"
+          commit: "chore(release): release and bump versions of packages"
+          title: "chore(release): release and bump versions of packages"
           publish: npx -p @changesets/cli changeset publish
           setupGitUser: false
         env:
