--- a/.github/workflows/release-with-changesets.yml
+++ b/.github/workflows/release-with-changesets.yml
@@ -114,10 +114,10 @@ jobs:
         uses: changesets/action@v1
         id: release
         with:
-          version: npx -p @changesets/cli changeset version
+          version: npx -p @changesets/cli@2.27.7 changeset version
           commit: "chore(release): release and bump versions of packages"
           title: "chore(release): release and bump versions of packages"
-          publish: npx -p @changesets/cli changeset publish
+          publish: npx -p @changesets/cli@2.27.7 changeset publish
           setupGitUser: false
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
