feat: include default nunjucks filters and new release to the generator (#1225)
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>%0ACo-authored-by: HUTCHHUTCHHUTCH <55915170+HUTCHHUTCHHUTCH@users.noreply.github.com>%0ACo-authored-by: asyncapi-bot <61865014+asyncapi-bot@users.noreply.github.com>%0ACo-authored-by: Amrut Prabhu <amrutprabhu42@gmail.com>%0ACo-authored-by: asyncapi-bot <bot+chan@asyncapi.io>%0ACo-authored-by: Christeen Fernando <christeenfdo24@gmail.com>%0ACo-authored-by: Lukasz Gornicki <lpgornicki@gmail.com>%0ACo-authored-by: Maciej Urbańczyk <urbanczyk.maciej.95@gmail.com>

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,10 +1,4 @@
-# This action is centrally managed in https://github.com/asyncapi/.github/
-# Don't make changes to this file in this repo as they will be overwritten with changes made to the same file in above mentioned repo
-
-# Purpose of this action is to update npm package in libraries that use it. It is like dependabot for asyncapi npm modules only. 
-# It runs in a repo after merge of release commit and searches for other packages that use released package. Every found package gets updated with lates version
-
-name: Bump package version in dependent repos - if Node project
+name: Bump package version in dependent repos
 
 on:
   # It cannot run on release event as when release is created then version is not yet bumped in package.json
@@ -21,15 +15,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      - name: Check if Node.js project and has package.json
-        id: packagejson
-        run: test -e ./package.json && echo "exists=true" >> $GITHUB_OUTPUT || echo "exists=false" >> $GITHUB_OUTPUT
-      - if: steps.packagejson.outputs.exists == 'true'
-        name: Bumping latest version of this package in other repositories
+      - name: Bumping latest version of this package in other repositories
         uses: derberg/npm-dependency-manager-for-your-github-org@1eafd3bf3974f21d395c1abac855cb04b295d570 # using v6.-.- https://github.com/derberg/npm-dependency-manager-for-your-github-org/releases/tag/v6
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           committer_username: asyncapi-bot
           committer_email: info@asyncapi.io
           repos_to_ignore: spec,bindings,saunter,server-api
+          packagejson_path: ./apps/generator
           custom_id: "dependency update from asyncapi bot"
