--- a/.github/workflows/release-with-changesets.yml
+++ b/.github/workflows/release-with-changesets.yml
@@ -1,15 +1,11 @@
-# This action is centrally managed in https://github.com/asyncapi/.github/
-# Don't make changes to this file in this repo as they will be overwritten with changes made to the same file in above mentioned repo
-
-# It does magic only if there is package.json file in the root of the project
-name: Release - if Node project
+# It does magic only if there is a package.json file in the root of the project
+name: Release
 
 on:
   push:
     branches:
       - master
-      # below lines are not enough to have release supported for these branches
-      # make sure configuration of `semantic-release` package mentions these branches
+        # The below lines are not enough to have release supported for these branches
       - next-spec
       - next-major
       - next-major-spec
@@ -19,14 +15,15 @@ on:
 
 jobs:
   test-nodejs:
-    # We just check the message of first commit as there is always just one commit because we squash into one before merging
-    # "commits" contains array of objects where one of the properties is commit "message"
+    # We just check the message of the first commit as there is always just one commit because we squash into one before merging
+    # "commits" contains an array of objects where one of the properties is the commit "message"
     # Release workflow will be skipped if release conventional commits are not used
     if: |
       startsWith( github.repository, 'asyncapi/' ) &&
       (startsWith( github.event.commits[0].message , 'fix:' ) ||
       startsWith( github.event.commits[0].message, 'fix!:' ) ||
       startsWith( github.event.commits[0].message, 'feat:' ) ||
+      startsWith( github.event.commits[0].message, 'chore(release):' ) ||
       startsWith( github.event.commits[0].message, 'feat!:' ))
     name: Test NodeJS release on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -36,7 +33,7 @@ jobs:
         # See: https://github.com/puppeteer/puppeteer/issues/12327 and https://github.com/asyncapi/parser-js/issues/1001
         os: [ubuntu-latest, macos-13, windows-latest]
     steps:
-      - name: Set git to use LF #to once and for all finish neverending fight between Unix and Windows
+      - name: Set git to use LF # To once and for all finish the never-ending fight between Unix and Windows
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
@@ -59,7 +56,7 @@ jobs:
       - if: steps.lockversion.outputs.version == '18' && matrix.os == 'windows-latest'
         name: Install npm cli 8
         shell: bash
-        #npm cli 10 is buggy because of some cache issues
+        # npm cli 10 is buggy because of some cache issues
         run: npm install -g npm@8.19.4
       - if: steps.packagejson.outputs.exists == 'true'
         name: Install dependencies
@@ -80,10 +77,10 @@ jobs:
 
   release:
     needs: [test-nodejs]
-    name: Publish to any of NPM, Github, or Docker Hub
+    name: Publish to any of NPM, GitHub, or Docker Hub
     runs-on: ubuntu-latest
     steps:
-      - name: Set git to use LF #to once and for all finish neverending fight between Unix and Windows
+      - name: Set git to use LF # To once and for all finish the never-ending fight between Unix and Windows
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
@@ -107,22 +104,29 @@ jobs:
         shell: bash
         run: npm ci
       - if: steps.packagejson.outputs.exists == 'true'
-        name: Add plugin for conventional commits for semantic-release
-        run: npm install --save-dev conventional-changelog-conventionalcommits@5.0.0
+        name: Install changelog
+        shell: bash
+        # This step can be removed once the issue is fixed in the changeset package.
+        run: npm install @changesets/changelog-git@0.2.0
       - if: steps.packagejson.outputs.exists == 'true'
         name: Publish to any of NPM, Github, and Docker Hub
+        #this step has 2 goals, it is either identifying that there is changeset file created and then this action creates a PR with version bump that will trigger release - or if it sees there is no changeset, and there are versions changes in package.json files, it publish new versions to NPM is they are not there yet
+        uses: changesets/action@v1
         id: release
+        with:
+          version: npx -p @changesets/cli@2.27.7 changeset version
+          commit: "chore(release): release and bump versions of packages"
+          title: "chore(release): release and bump versions of packages"
+          publish: npx -p @changesets/cli@2.27.7 changeset publish
+          setupGitUser: false
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           GIT_AUTHOR_NAME: asyncapi-bot
           GIT_AUTHOR_EMAIL: info@asyncapi.io
           GIT_COMMITTER_NAME: asyncapi-bot
           GIT_COMMITTER_EMAIL: info@asyncapi.io
-        run: npx semantic-release@19.0.4
-      - if: failure() # Only, on failure, send a message on the 94_bot-failing-ci slack channel
+      - if: failure() # Only, on failure, send a message on the 94_bot-failing-ci Slack channel
         name: Report workflow run status to Slack
         uses: 8398a7/action-slack@v3
         with:
