--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo dev",
     "test": "turbo run test",
     "lint": "turbo lint",
+    "lint:fix": "turbo run lint:fix",
     "generator:test": "turbo run test --filter=@asyncapi/generator",
     "generator:test:dev": "turbo run test:dev",
     "generator:test:unit": "turbo run test:unit  --filter=@asyncapi/generator",
@@ -16,7 +17,9 @@
     "generator:docs": "turbo run docs --filter=@asyncapi/generator",
     "generator:docker:build": "turbo run docker:build --filter=@asyncapi/generator",
     "generator:lint": "turbo run lint --filter=@asyncapi/generator",
-    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator"
+    "generator:lint:tpl:validator": "turbo run lint:tpl:validator --filter=@asyncapi/generator",
+    "generator:update:snapshot": "turbo run test:integration:update --filter=@asyncapi/generator",
+    "nunjucks-filters:test": "turbo run test --filter=@asyncapi/nunjucks-filters"
   },
   "devDependencies": {
     "turbo": "1.13.3"
