--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -75,7 +75,7 @@
     "source-map-support": "^0.5.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "nunjucks-filters": "file:../nunjucks-filters"
+    "@asyncapi/nunjucks-filters": "*"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
