--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -1,8 +1,8 @@
 name: Release Docker Image
 on:
-  release:
-    types:
-      - published
+  push:
+    branch:
+      - testing-master
 
 jobs:
 
@@ -14,7 +14,7 @@ jobs:
         id: version
         run: |
           VERSION=${{github.event.release.tag_name}}
-          VERSION_WITHOUT_V=${VERSION##*@}
+          VERSION_WITHOUT_V=2.1.3
           echo "value=${VERSION_WITHOUT_V}" >> $GITHUB_OUTPUT
 
       - name: Set Up QEMU
@@ -26,8 +26,8 @@ jobs:
       - name: login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ayushnautiyal706020
+          password: dockerayushnau
 
       # This workflow triggers on GitHub Release, but it may start before the npm package is published.
       - name: Sleep for 1s seconds
@@ -40,10 +40,10 @@ jobs:
           push: true
           load: false
           build-args: |
-            ASYNCAPI_GENERATOR_VERSION=${{ steps.version.outputs.value }}
+            ASYNCAPI_GENERATOR_VERSION=2.1.3
           tags: |
-            asyncapi/generator:${{ steps.version.outputs.value }}
-            asyncapi/generator:latest
+            ayushnautiyal706020/generator:${{ steps.version.outputs.value }}
+            ayushnautiyal706020/generator:latest
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha
@@ -51,7 +51,8 @@ jobs:
       - name: Update Docker Hub Readme
         uses: meeDamian/sync-readme@v1.0.6
         with:
-           user: ${{ secrets.DOCKER_USERNAME }}
-           pass: ${{ secrets.DOCKER_PASSWORD }}
+           user: ayushnautiyal706020
+           pass: dockerayushnau
            slug: asyncapi/generator
+           readme: ../../README.md
            description: Use your AsyncAPI definition to generate literally anything. Markdown documentation, Node.js code, HTML documentation, anything!
