Added the correct path for the readme file.

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -54,4 +54,5 @@ jobs:
            user: ${{ secrets.DOCKER_USERNAME }}
            pass: ${{ secrets.DOCKER_PASSWORD }}
            slug: asyncapi/generator
+           readme: ../../README.md
            description: Use your AsyncAPI definition to generate literally anything. Markdown documentation, Node.js code, HTML documentation, anything!
