--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -50,7 +50,10 @@ jobs:
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha
-
+          
+      - name: Check out the repository
+        uses: actions/checkout@v2
+        
       - name: Update Docker Hub Readme
         uses: meeDamian/sync-readme@v1.0.6
         with:
