--- a/apps/generator/package.json
+++ b/apps/generator/package.json
@@ -25,7 +25,8 @@
     "lint:tpl:validator": "eslint --fix --config ../../.eslintrc ../../.github/templates-list-validator",
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run docs && npm run generate:readme:toc",
-    "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION"
+    "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
+    "postinstall": "node ./scripts/postinstall.js"
   },
   "preferGlobal": true,
   "bugs": {
