--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'master'
     paths:
-      - 'docs/*.md'
+      - 'apps/generator/docs/*.md'
 
 jobs:
   Make-PR:
@@ -37,10 +37,10 @@ jobs:
         run: |
           rm -r ./markdown/docs/tools/generator
           mkdir -p ./markdown/docs/tools/generator
-          rm ../generator/docs/README.md
-          rm -r ../generator/docs/jsdoc2md-handlebars
+          rm ../generator/apps/generator/docs/README.md
+          rm -r ../generator/apps/generator/docs/jsdoc2md-handlebars
           printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/docs/_section.md
-          mv ../generator/docs/*.md ./markdown/docs/tools/generator
+          mv ../generator/apps/generator/docs/*.md ./markdown/docs/tools/generator
       - name: Commit and push
         working-directory: ./website
         run: |
