--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -6,6 +6,7 @@ on:
       - 'master'
     paths:
       - 'apps/generator/docs/*.md'
+      - '.github/workflows/update-docs-in-website.yml'
 
 jobs:
   Make-PR:
@@ -39,7 +40,7 @@ jobs:
           mkdir -p ./markdown/docs/tools/generator
           rm ../generator/apps/generator/docs/README.md
           rm -r ../generator/apps/generator/docs/jsdoc2md-handlebars
-          printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/docs/_section.md
+          printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/apps/generator/docs/_section.md
           mv ../generator/apps/generator/docs/*.md ./markdown/docs/tools/generator
       - name: Commit and push
         working-directory: ./website
