fix(security): add --ignore-scripts flag to npm install to prevent shell script execution

--- a/apps/generator/Dockerfile
+++ b/apps/generator/Dockerfile
@@ -12,7 +12,7 @@ ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD="true"
 # Since 0.14.0 release of html-template chromium is needed for pdf generation.
 # More custom packages for specific template should not be added to this dockerfile. Instead, we should come up with some extensibility solution.
 RUN apk --update add --no-cache git chromium && \
-    npm install -g @asyncapi/generator@"$ASYNCAPI_GENERATOR_VERSION" && \
+    npm install --ignore-scripts -g @asyncapi/generator@"$ASYNCAPI_GENERATOR_VERSION" && \
     npm cache clean --force
 
 # Define the entry point for the AsyncAPI generator
