feat: add hooks library to generator

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "turbo run test",
     "lint": "turbo lint",
     "lint:fix": "turbo run lint:fix",
+    "generate:assets": "turbo run generate:assets && npm run generate:readme:toc",
+    "generate:readme:toc": "markdown-toc -i README.md",
     "generator:test": "turbo run test --filter=@asyncapi/generator",
     "generator:test:dev": "turbo run test:dev",
     "generator:test:unit": "turbo run test:unit  --filter=@asyncapi/generator",
@@ -22,6 +24,7 @@
     "nunjucks-filters:test": "turbo run test --filter=@asyncapi/nunjucks-filters"
   },
   "devDependencies": {
+    "markdown-toc": "^1.2.0",
     "turbo": "1.13.3"
   },
   "engines": {
