added sonar test link

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,3 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.exclusions=test/**/*
+sonar.test.inclusions=apps/generator/test/test-templates/**/*test.js,apps/generator/test/test-project/**/*test.js
+
