--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,3 +1,2 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.test.inclusions=apps/generator/test/test-templates/**/*test.js,apps/generator/test/test-project/**/*test.js
-
+sonar.test.inclusions=apps/generator/test/**/*.test.js
